Added homepage hero CSS

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,34 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: seashell;
+  background-color: #1b1b1b;
 }
 
-p {
+.hero {
+  background-color: #272142;
+  color: white;
+  text-align: center;
+  padding: 160px;
+}
+
+.btn-branded {
   font-family: "Montserrat", sans-serif;
+  color: white;
+  background-color: #9c89f5;
+  padding: 18px 36px;
+  margin: 25px;
+  border-radius: 4px;
+}
+
+h1 {
+  font-size: 96px;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+.hero p {
+  font-size: 24px;
+  font-weight: normal;
+  color: #9c89f5;
 }
