--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
   background-color: #1b1b1b;
+  color: white;
 }
 
 .hero {
@@ -17,6 +18,11 @@ body {
   padding: 18px 36px;
   margin: 25px;
   border-radius: 4px;
+  border: 1px solid #9c89f5;
+}
+
+.btn-branded:hover {
+  border: 1px solid #9c89f5;
 }
 
 h1 {
@@ -31,4 +37,12 @@ h2 {
   font-size: 24px;
   font-weight: normal;
   color: #9c89f5;
+}
+
+.btn-branded-outline {
+  padding: 18px 36px;
+  margin: 15px;
+  border-radius: 4px;
+  color: white;
+  border: 1px solid white;
 }
