--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+:root {
+  --primary-color: #272142;
+  --accent-color: #9c89f5;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   background-color: #1b1b1b;
@@ -5,7 +10,7 @@ body {
 }
 
 .hero {
-  background-color: #272142;
+  background-color: var(--primary-color);
   color: white;
   text-align: center;
   padding: 160px;
@@ -14,15 +19,15 @@ body {
 .btn-branded {
   font-family: "Montserrat", sans-serif;
   color: white;
-  background-color: #9c89f5;
+  background-color: var(--accent-color);
   padding: 18px 36px;
   margin: 25px;
   border-radius: 4px;
-  border: 1px solid #9c89f5;
+  border: 1px solid var(--accent-color);
 }
 
 .btn-branded:hover {
-  border: 1px solid #9c89f5;
+  border: 1px solid var(--accent-color);
 }
 
 h1 {
@@ -36,7 +41,7 @@ h2 {
 .hero p {
   font-size: 24px;
   font-weight: normal;
-  color: #9c89f5;
+  color: var(--accent-color);
 }
 
 .btn-branded-outline {
@@ -44,5 +49,6 @@ h2 {
   margin: 15px;
   border-radius: 4px;
   color: white;
-  border: 1px solid white;
+  border: 1px solid var(--accent-color);
+  background-color: var(--primary-color);
 }
