--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,25 @@ body {
   color: white;
 }
 
+h1 {
+  font-size: 96px;
+}
+
+h2 {
+  font-size: 36px;
+}
+
 .hero {
   background-color: var(--primary-color);
   color: white;
   text-align: center;
   padding: 160px;
+}
+
+.hero p {
+  font-size: 24px;
+  font-weight: normal;
+  color: var(--accent-color);
 }
 
 .btn-branded {
@@ -30,23 +44,17 @@ body {
   border: 1px solid var(--accent-color);
 }
 
-h1 {
-  font-size: 96px;
+.site-description {
+  margin: 75px 20px;
 }
 
-h2 {
-  font-size: 36px;
-}
-
-.hero p {
-  font-size: 24px;
-  font-weight: normal;
-  color: var(--accent-color);
+p {
+  line-height: 30px;
 }
 
 .btn-branded-outline {
+  font-family: "Montserrat", sans-serif;
   padding: 18px 36px;
-  margin: 15px;
   border-radius: 4px;
   color: white;
   border: 1px solid var(--accent-color);
