--- a/src/style.css
+++ b/src/style.css
@@ -44,8 +44,14 @@ h2 {
   border: 1px solid var(--accent-color);
 }
 
+.home-content-container {
+  max-width: 1300px;
+  display: block;
+  margin: 0 auto;
+}
+
 .site-description {
-  margin: 75px 20px;
+  margin: 30px;
 }
 
 p {
@@ -59,4 +65,8 @@ p {
   color: white;
   border: 1px solid var(--accent-color);
   background-color: var(--primary-color);
+}
+
+.homepage-img {
+  margin: 15px;
 }
