--- a/src/style.css
+++ b/src/style.css
@@ -68,13 +68,14 @@ p {
 }
 
 .about-container {
-  max-width: 70%;
+  max-width: 75%;
   display: block;
   margin: 0 auto;
+  padding: 90px 10px 0 10px;
 }
 
 .content {
-  margin-right: 35px;
+  padding: 30px;
 }
 
 .content h1 {
@@ -146,5 +147,12 @@ p {
 
   .content h2 {
     font-size: 18px;
+  }
+
+  .about-container {
+    max-width: 75%;
+    display: block;
+    margin: 0 auto;
+    padding-top: 20px;
   }
 }
