Added header nav

--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,35 @@ h2 {
   font-size: 36px;
 }
 
+nav {
+  padding: 20px 0;
+}
+
+ul {
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  line-height: 40px;
+  list-style: none;
+  margin-left: 20px;
+}
+
+nav li a {
+  text-decoration: none;
+  color: white;
+}
+
+nav li.active a,
+nav a:hover {
+  color: #9c89f5;
+}
+
+.logo {
+  max-height: 36px;
+}
+
 .hero {
   background-color: var(--primary-color);
   color: white;
@@ -137,6 +166,10 @@ p {
 
   .content h1 {
     font-size: 56px;
+  }
+
+  nav a {
+    font-size: 14px;
   }
 }
 
