--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,10 @@ h2 {
   font-size: 36px;
 }
 
+h4 {
+  font-size: 32px;
+}
+
 nav {
   padding: 20px 0;
 }
@@ -37,7 +41,7 @@ nav li a {
   color: white;
 }
 
-nav li.active a,
+nav li .active a,
 nav a:hover {
   color: #9c89f5;
 }
@@ -125,6 +129,47 @@ p {
 
 .my-work-unit:hover {
   transform: scale(1.1);
+}
+
+footer {
+  margin: 70px 0 50px 0;
+}
+
+footer .contact-box {
+  background-color: var(--primary-color);
+  padding: 30px 70px;
+  max-width: 70%;
+  display: block;
+  margin: 0 auto;
+}
+
+footer a {
+  font-size: 24px;
+  text-decoration: none;
+  color: var(--accent-color);
+}
+
+footer .email-link {
+  transition: all 150ms ease-in-out;
+}
+
+footer .email-link:hover {
+  color: white;
+  cursor: pointer;
+}
+
+footer i {
+  color: var(--primary-color);
+  background-color: var(--accent-color);
+  border-radius: 40px;
+  padding: 4px;
+  margin: 0 20px;
+  transition: all 150ms ease-in-out;
+}
+
+footer i:hover {
+  background-color: white;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
