--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ nav li a {
   color: white;
 }
 
-nav li .active a,
+nav li a.active,
 nav a:hover {
   color: #9c89f5;
 }
@@ -132,7 +132,7 @@ p {
 }
 
 footer {
-  margin: 70px 0 50px 0;
+  margin: 90px 0 50px 0;
 }
 
 footer .contact-box {
@@ -143,14 +143,11 @@ footer .contact-box {
   margin: 0 auto;
 }
 
-footer a {
+footer .email-link {
+  transition: all 150ms ease-in-out;
   font-size: 24px;
   text-decoration: none;
   color: var(--accent-color);
-}
-
-footer .email-link {
-  transition: all 150ms ease-in-out;
 }
 
 footer .email-link:hover {
@@ -172,6 +169,23 @@ footer i:hover {
   cursor: pointer;
 }
 
+footer a {
+  color: var(--accent-color);
+  text-decoration: none;
+}
+
+.contact-link {
+  color: var(--accent-color);
+  font-size: 20px;
+  text-decoration: none;
+  transition: all 150ms ease-in-out;
+}
+
+.contact-link:hover {
+  color: white;
+  cursor: pointer;
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 50px;
@@ -182,7 +196,7 @@ footer i:hover {
   }
 
   .hero {
-    padding: 15px 0;
+    padding: 45px 10px;
     margin: 0 auto;
     width: 100%;
   }
@@ -190,6 +204,7 @@ footer i:hover {
   .hero p {
     font-size: 18px;
   }
+
   .btn-branded {
     font-size: 15px;
   }
